# h5coro-hidefix

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
python/h5coro_hidefix/: __init__.py  manifest.py  zagg_backend.py
src/: lib.rs
tests/: conftest.py  test_backend_hermetic.py  test_hermetic.py  test_local_granules.py  test_zagg_integration.py  zagg_protocol_stub.py
